Made name of library Camelcase. Updated paragraph to acknowledge other library dependencies.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=vbus-arduino
-version=1.0
+name=VBUS-Arduino
+version=1.0.1
 author=Brian Healy <healybrian@gmail.com>
 maintainer=Brian Healy <healybrian@gmail.com>
 sentence=Allows arduino to read data from some vbus compatible controllers.
-paragraph=Currently Deltasol C, Resol DeltaTherm FK,Oranier Aquacontrol III & Conergy DT5 are supported.
+paragraph=Currently Deltasol C, Resol DeltaTherm FK,Oranier Aquacontrol III & Conergy DT5 are supported. May require AltSoftSerial when not using mega type Arduinos
 category=Signal Input/Output
 url=https://github.com/FatBeard/vbus-arduino-library
 architectures=avr
