Rename back to lowercase as arduino ide was treating as two different libraries

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=VBUS-Arduino
+name=vbus-arduino
 version=1.0.1
 author=Brian Healy <healybrian@gmail.com>
 maintainer=Brian Healy <healybrian@gmail.com>
