--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,4 @@ category=Signal Input/Output
 url=https://github.com/FatBeard/vbus-arduino-library
 architectures=avr
 includes=VBUSDecoder.h
+depends=AltSoftSerial
